<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="@color/darkviolet"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/darkviolet"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/entrada"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/valor"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <TextView
            android:id="@+id/tv_seleccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/seleccion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/scrollbarSize"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_primer_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:entries="@array/primera_lista_monedas" />

            <TextView
                android:id="@+id/tv_conector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_segundo_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:entries="@array/segunda_lista_monedas" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:layout_weight="1"
            android:background="@color/darkviolet"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/resultado"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/resultado_conversion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_mostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/mostrar"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>